syntax = "proto3";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "Dto/search.proto";
option csharp_namespace = "LodgeSpotGo.SearchAndFilter.Grpc";
message ReservationSearchRequest{
  google.protobuf.Timestamp startDate = 1;
  google.protobuf.Timestamp endDate = 2;
}
message DateRangeDto {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
}

message ReadReservationDto{
  string id = 1;
  string accommodationId = 2;
  DateRangeDto dateRange =3;
  string status = 4;
  int32 numberOfGuest = 5;
}
message GetReservationListResponse{repeated ReadReservationDto reservations = 1;}

service SearchReservationApp{
  rpc SearchReservations(ReservationSearchRequest) returns (GetReservationListResponse){
    option(google.api.http) = {
      get: "/api/v1/search-reservation/{startDate}/{endDate}"
    };
  }
}